# api-poc

./: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  request-vegeta.txt  request.txt
actix/: Cargo.toml  Dockerfile
actix/lib/: app_config.rs  lib.rs
actix/lib/config/: app.rs  mod.rs
actix/lib/routes/: mod.rs
actix/lib/routes/file_upload/: mod.rs
actix/lib/routes/ping/: mod.rs
actix/lib/routes/websocket/: mod.rs
actix/src/: main.rs
fastify/: .eslintrc.json  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
fastify/src/: app-helpers.ts  app.ts  main.ts
fastify/src/config/: index.ts  swagger.ts
fastify/src/routes/: index.ts
fastify/src/routes/file-upload/: index.ts
fastify/src/routes/ping/: index.ts
fastify/src/types/: index.ts  route-args.ts  route.ts
gin/: go.mod  main.go
gin/routes/: ping.go  upload.go
gin/templates/: upload.tmpl  upload_error.tmpl  upload_success.tmpl
marble/: .eslintrc.json  package.json  pnpm-lock.yaml
src/: app.ts  main.ts  swagger.ts
warp/: Cargo.toml  Dockerfile
warp/src/: main.rs
