[package]
name = "api-actix"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "lib/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
