[package]
name = "poc"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "poc"
path = "src/main.rs"

[dependencies]
env_logger = "0.8.3"
num_cpus = "1.13.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
